@@ -27,7 +27,7 @@ TESTS_ENVIRONMENT = sh runtest
 
 TESTS = alive.scm basic.scm large.scm types-table.scm meta.scm
 
-XFAIL_TESTS = types-table.scm
+XFAIL_TESTS =
 
 CLEANFILES = $(TESTS:.scm=.log)                 \
              lo-tests-data-1                    \
